IO2019TEAM-68 Add sprint state and user role enums to swagger config

--- a/src/main/resources/api.yaml
+++ b/src/main/resources/api.yaml
@@ -49,3 +49,17 @@ definitions:
         type: string
     required:
       - username
+  SprintState:
+    type: string
+    enum:
+      - upcoming
+      - declarable
+      - padding
+      - in_progress
+      - finished
+      - closed
+  UserStatus:
+    type: string
+    enum:
+      - admin
+      - member
