--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,13 @@ dependencies {
     compile 'javax.xml.bind:jaxb-api:2.3.1'
     compile 'io.springfox:springfox-swagger2:2.9.2'
 
+    // client dependencies
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
+    compile 'com.squareup.okhttp:logging-interceptor:2.7.5'
+    compile 'com.squareup.okio:okio:2.2.2'
+    compile 'com.google.code.gson:gson:2.8.5'
+    compile 'io.gsonfire:gson-fire:1.8.3'
+
     swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.7'
 }
 
@@ -36,11 +43,23 @@ swaggerSources {
             dependsOn validation
         }
     }
+    papayaClient {
+        inputFile = file("$buildDir/resources/main/api.yaml")
+        code {
+            language = 'java'
+            configFile = file("$buildDir/resources/main/config-client.json")
+            dependsOn validation
+        }
+    }
 }
 
 sourceSets.main.java.srcDirs += "${swaggerSources.papaya.code.outputDir}/src/main/java"
 sourceSets.main.resources.srcDirs += "${swaggerSources.papaya.code.outputDir}/src/main/resources"
+sourceSets.main.java.srcDirs += "${swaggerSources.papayaClient.code.outputDir}/src/main/java"
+sourceSets.main.resources.srcDirs += "${swaggerSources.papayaClient.code.outputDir}/src/main/resources"
 
 compileJava.dependsOn(generateSwaggerCode)
 validateSwaggerPapaya.dependsOn(processResources)
 generateSwaggerCodePapaya.dependsOn(processResources)
+validateSwaggerPapayaClient.dependsOn(processResources)
+generateSwaggerCodePapayaClient.dependsOn(processResources)
