IO2019TEAM-16 Add webhook url and channel name to ProjectDto

--- a/src/main/resources/api.yaml
+++ b/src/main/resources/api.yaml
@@ -439,6 +439,10 @@ definitions:
       initialCoefficient:
         type: number
         format: double
+      webhookUrl:
+        type: string
+      channelName:
+        type: string
     required:
       - name
       - description
