--- a/src/main/resources/api.yaml
+++ b/src/main/resources/api.yaml
@@ -216,6 +216,34 @@ paths:
           schema:
             $ref: '#/definitions/AvailabilityDto'
 
+  /projects/{projectId}/sprints/{sprintId}/summary:
+    get:
+      tags:
+        - projects
+        - sprints
+      summary: Retrives a list of project members with their availability and calculated coefficients for given sprint
+      operationId: getSprintSummary
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: projectId
+          type: integer
+          format: int64
+          required: true
+          description: Numeric ID of the project
+        - in: path
+          name: sprintId
+          type: integer
+          format: int64
+          required: true
+          description: Numeric ID of the sprint
+      responses:
+        200:
+          description: Summary of requested sprint
+          schema:
+            items:
+              $ref: '#/definitions/SprintSummaryDto'
 
 definitions:
   LoginResult:
@@ -331,3 +359,23 @@ definitions:
     required:
       - timeAvailable
       - timeRemaining
+
+  SprintSummaryDto:
+    type: object
+    properties:
+      membersAvailability:
+        type: array
+        items:
+          $ref: '#/definitions/AvailabilityDto'
+        description: List of members' availability for given sprint
+      totalAvailableTime:
+        type: integer
+        format: int64
+        description: In minutes
+      sprintCoefficient:
+        type: number
+        format: double
+    required:
+      - membersAvailability
+      - totalAvailableTime
+      - sprintCoefficient
