--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
 dist: xenial
 
-language: java
-jdk:
-  - openjdk11
-
-script:
-  - ./gradlew clean check
+jobs:
+  include:
+    - stage: validate
+      language: node_js
+      node_js:
+        - "10.15"
+      install: npm i -g swagger-cli
+      script:
+        - swagger-cli validate ./src/main/resources/api.yaml
+    - stage: generate
+      language: java
+      jdk:
+        - openjdk11
+      script:
+        - ./gradlew clean check
 
 branches:
   only:
