--- a/src/main/resources/api.yaml
+++ b/src/main/resources/api.yaml
@@ -389,6 +389,44 @@ paths:
           schema:
             $ref: '#/definitions/SprintSummaryDto'
 
+  /users/{userId}:
+    get:
+      tags:
+        - users
+      summary: Obtains a user by id
+      operationId: getUser
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: userId
+          type: integer
+          format: int64
+          required: true
+          description: Numeric ID of the user
+      responses:
+        200:
+          description: Object representing user
+          schema:
+            $ref: '#/definitions/UserDto'
+
+  /me:
+    get:
+      tags:
+        - users
+      summary: Obtains authenticated user's information
+      operationId: getAuthenticatedUser
+      produces:
+        - application/json
+      responses:
+        200:
+          description: Object representing user
+          schema:
+            $ref: '#/definitions/UserDto'
+
+
 definitions:
   LoginResult:
     type: object
@@ -546,6 +584,19 @@ definitions:
     required:
       - timeAvailable
       - timeRemaining
+
+  UserDto:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      firstName:
+        type: string
+      lastName:
+        type: string
+      email:
+        type: string
 
   SprintSummaryDto:
     type: object
